--- a/PSTAT131_Homework1.Rmd
+++ b/PSTAT131_Homework1.Rmd
@@ -25,9 +25,8 @@ From the textbook page 28, regression models are those based on problems with a 
 
 According to textbook page 29, these two models are both used in machine learning and often, the type of model to be used may be decided based on whether the response is qualitative (classification) or quantitative (regression). However, as mentioned on textbook page 29, whether the predictors are qualitative or quantitative is less important because many statistical methods can be applied regardless of the predictor variable type with proper coding for qualitative predictors in advance.  
 
-### Question 3   HELP
-(HELP what it mean by metric????)  ANY MEASURE OF THE MODELS PERFORMANCE accuracy, f1 score - classification
-mse and root mse - regression
+### Question 3   
+According to the textbook page 29 and Professor Coburn's office hours, two metrics for regression are the Mean Squared Error (MSE = $$\frac{1}{n}\sum_{i=1}^n (y_i - \hat{f}(x_i))^2$$ and the Root Mean Squared Error (RMSE = $\sqrt{MSE}$). According to [Opengenus.org](https://iq.opengenus.org/performance-metrics-in-classification-regression/), two metrics for classification are accuracy (ratio of the number of correct predictions and the total number of predictions) and the F1-score (F1-score = $2 * \frac{precision*recall}{precision+recall}$).  
 
 ### Question 4   
 
@@ -43,11 +42,8 @@ Mechanistic (aka parametric) predictive models assume that there are some parame
 
 Based on Lecture: Course Overview and Introduction slide 38, The two model types are different because the mechanistic type assumes parameters and a parametric form of f whereas the empirically-driven type does not make any assumptions about parameters or f. Also, mechanistic model types require fewer observations than empirically-driven model types. Because of this difference, mechanistic model types require more parameters to be more flexible, while empirically-driven model types are much more flexible by default. However, according to Lecture: Course Overview and Introduction slide 38, the two model types can be similar in that these two model types may both lead to overfitting. In a mechanistic type model, if there are too many parameters, the model may become so flexible that it also fits random noise, which is overfitting. In an empirically-drive type model, since the model type is already much more flexible by default, it is more susceptible to overfitting by default as well.    
 
-( IS THIS JUST OPINION???)Mechanistic model is easier to understand because assumptions can be made about the model whereas in empirically-driven models, everything must be deduced from the data. 
+Mechanistic models tend to be easier to explain and understand because they tend to be simpler than empirically-driven models. For example, explaining a linear regression (mechanistic) would be much easier than explaining a decision tree with several nodes (empirically-driven). Thus, it may be harder to understand emprically-driven models simply because they are also harder to communicate and explain due to the complexity they can reach.  
 
-Mechanistic models tend to be easier to explain and empirically driven can become a lot harder to explain
-
-(what is bias-variance tradeoff)  
 The bias-variance tradeoff is related to the use of mechanistic and empirically driven models in that the model type that you use may affect the bias-variance tradeoff. If a more empirically-driven model is used, such as drawing a curve that passes through every training observation, the method would have extremely low bias but high variance according to textbook page 36. If fitted to observations outside of the training set, the empirically-driven model would not be as accurate (because of overfitting). However, if a more mechanistic model is used, such as fitting a horizontal line to the data, the method might have very low variance but high bias according to textbook page 36. Using a more mechanistic model would allow for the training observations to be less fit to the chosen model, but using observations outside of the training set would not make the mechanistic model decrease in accuracy as with the empirically-driven model.  
 
 ### Question 6 
@@ -78,7 +74,7 @@ hwy_hist
 **Describe:**  
 The histogram of highway miles per gallon is generally right skewed and bimodal. The two peaks are around 17 mpg and 27 mpg.  
 
-### Exercise 2  (HELP)
+### Exercise 2    
 ```{r}
 hwy_cty_scatter <- ggplot(mpg, aes(x=hwy, y=cty)) +
     geom_point()
@@ -86,47 +82,44 @@ hwy_cty_scatter <- ggplot(mpg, aes(x=hwy, y=cty)) +
 hwy_cty_scatter
 ```
 **Describe:**  
-There is a strong positive relationship between hwy and cty. This means that, as the highway miles per gallon increases, the city miles per gallon also increases. Intuitively, this makes sense because those who get more mpg in any given city will also get more mpg on the highway.  
+There is a strong positive relationship between `hwy` and `cty`. This means that, as the highway miles per gallon increases, the city miles per gallon also increases. Intuitively, this makes sense because those who get more mpg in any given city will also get more mpg on the highway.  
 
-### Exercise 3  HELP (descending order??)
+### Exercise 3   
 ```{r}
 library(forcats)
 manufacturer_bar <- ggplot(mpg, aes(y=fct_infreq(manufacturer))) +
   geom_bar()
-
-#NEED TO USE REORDER() WITHIN AES()? --> HOWWW
 
 manufacturer_bar
 ```
 
 Dodge produced the most cars. Lincoln produced the least cars.  
 
-### Exercise 4  HELP WITH EXPLANATION
+### Exercise 4   
 ```{r}
-hwy_cyl_boxplot <- ggplot(mpg, aes(x=hwy, y=cyl, group=cyl, fill=cyl)) +
+hwy_cyl_boxplot <- ggplot(mpg, aes(x=hwy, y = cyl, group=cyl)) +
   geom_boxplot()
 
 hwy_cyl_boxplot
 ```
-There is an apparent pattern shown with the boxplots. The highway miles per gallon appear to generally decrease as the cylinder count increases. The first quartile and median of the highway miles per gallon appear to decrease as each cylinder count increases. However, for the third quartile, the highway miles per gallon decrease as each cylinder count increases except at the 5 cylinder count.  (DO I NEED TO SAY ALL THIS?? can i just stop at second sentence?)  
+There is an apparent pattern shown with the boxplots. The highway miles per gallon appear to generally decrease as the cylinder count increases. However, at the 5 cylinder count, the general pattern is disrupted as the highway miles per gallon do not show a general decrease compared to the 4 cylinder count (except at the minimum and first quartile, which both decreased when comparing the 5 cylinder boxplot to the 4 cylinder boxplot).  
 
-### Exercise 5  HELP(doing it right?? year??)
+### Exercise 5   
 ```{r}
 head(mpg)
 M <- cor(mpg[, !(names(mpg) %in% c("manufacturer", "model", "trans", "drv","fl", "class"))])
 corrplot(M, method="number", type="lower")
 ```
 
-Each of the variables has a perfect positive correlation with itself, which makes sense because all of the values are the same.  
+Each of the variables has a perfect positive correlation with itself, which makes sense because all of the values are the same between a variable and itself.   
 
-Year appears to have no correlation (with cty and hwy) or a very weak positive correlation (with cyl and displ) with all the variables. This indicates that each of the variables do not really vary depending on the year.  
+`year` appears to have no correlation (with `cty` and `hwy`) or a very weak positive correlation (with `cyl` (0.12) and `displ` (0.15)) with all the variables. This indicates that each of the variables do not significantly vary depending on the year.   
 
+`hwy` & `cty` have a strong positive correlation (0.96), which makes sense because, if individuals in certain cities are getting more miles per gallon on the highway, those same individuals are getting more miles per gallon in their respective cities.   
 
+Also, `cyl` & `displ` have a strong positive correlation (0.93). According to [Wikipedia](https://en.wikipedia.org/wiki/Engine_displacement), "engine displacement is the measure of the cylinder volume swept by all of the pistons of a piston engine, excluding the combustion chambers." So, it makes sense that the number of cylinders and engine displacement are positively correlated because, the more cylinders there are in a car, the more volume of the engine that is taken up by those cylinders (which is the engine displacement).  
 
+`cty` & `cyl` (-0.81) and `hwy` & `cyl` (-0.76) are both negatively correlated for the same reasons. According to [Capital One](https://www.capitalone.com/cars/learn/finding-the-right-car/4-cylinder-vs-6-cylinder-which-is-more-fuel-efficient/1302), a car with more cylinders has more horsepower and also makes a car weigh more. Thus, it would make sense that a car with more cylinders in it would get less miles per gallon both on the highway and in the city because the car would be less fuel efficient and it would take more of the car's energy to move the greater weight of the car (and vice versa for a car with fewer cylinders).  
 
+Furthermore, `cty` & `displ` (-0.80) and `hwy` & `displ` (-0.77) are both negatively correlated for the same reasons, which are related to the previous explaination (which might explain why the correlations are quite similar to the correlations mentioned in the previous explanation (-0.81 is close to -0.80; -0.76 is close to -0.77)). A car with more engine displacement is usually a car with more cylinders (as we saw from the strong positive correlation between `cyl` & `displ`). So, obviously, `displ` would have a similar correlation to `cty` and `hwy` as `cyl` because a higher value of `displ` would mean a higher value of `cyl` which, as I previously explained, means the car is less fuel efficient and is heavier. Therefore, it makes sense that cars get less miles per gallon both on the highway and in the city when there is greater engine displacement from a greater number of cylinders.   
 
-cyl (number of cylinders) & displ (engine displacement) and hwy (highway miles per gallon) & cty (city miles per gallon) appear to be negatively correlated. According to Wikipedia, engine displacement is the measure of cylinder volume swept by all of the pistons of a piston engine, without including the combustion chamber. So, it would make sense that, as cyl increases, displ increases because there is more cylinder volume with more cylinders. Also, it makes sense that hwy and cty are positively correlated because, if individuals in certain cities are getting more miles per gallon on the highway, those same individuals are getting more miles per gallon in their respective cities.  
-
-cty & displ, hwy & displ, cty & cyl, and hwy & cyl are all negatively correlated. According to Wikipedia, the lower the engine displacement, the less fuel an engine may consume. Therefore, it makes sense that cty & displ as well as hwy & displ are negatively correlated. Those with greater engine displacement consume more fuel, so they get fewer miles per gallon. This applies both on the highway and in their respective cities. So, as displ increases, hwy and cty naturally decrease. Also, for a similar reason, it makes sense that cty & cyl and hwy & cyl are negatively correlated because cyl & displ are positively correlated. So, a greater number of cylinders (which is associated with greater engine displacement) would lead to more fuel consumption. It makes sense that cty & cyl and hwy & cyl are negatively correlated because cars with a greater number of cylinders get fewer miles per gallon on the highway and in their respective cities.  
-
-*Note*: I say "respective cities" here because, as mentioned before the cars that get high highway miles per gallon are also getting high city miles per gallon in their respective cities.  
